syntax = "proto3";
package google.protobuf;

option csharp_namespace = "Communication";

message ClientPacket {
    string Data = 1;
}
